--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>The RGB GAME</title>
 </head>
 <body>
-    <h1>THE GREAT COLOR <span id="colorDisplay">RGB</span>GAME </h1>
+    <h1>THE GREAT COLOR
+        <br>
+        <span id="colorDisplay">RGB</span>
+        <br>
+        GAME </h1>
 
     <div id="stripe">
         <button id="rest">New Color</button>
